<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SMSBarrage</string>
    
    <string name="disclaimer">The use of this program is allowed only for legal purposes. Spamming of any kind is strictly prohibited. You, the user, accept any and all responsibilities by using this program.</string>
	<string name="disclaimer_title">Warning!</string>
    <string name="disclaimer_agree">Agree</string>
	<string name="disclaimer_disagree">Disagree</string>
    
    <string name="compose_title">SMSBarrage Compose</string>
    <string name="prefs_title">SMSBarrage Preferences</string>
    <string name="about_title">SMSBarrage About</string>
    
    <!--  Preferences -->
    <string name="preference_auto_start">auto_start</string>
    <string name="preference_auto_start_title">Auto-Start Service</string>
    <string name="preference_auto_start_summary">This will allow incomplete barrages to resume when your device restarts.</string>
    
    <!-- BarrageList options menu -->
    <string name="menu_new_barrage">New Barrage</string>
    <string name="menu_pause_all">Pause All</string>
    <string name="menu_delete_all">Cancel All</string>
    <string name="menu_preferences">Preferences</string>
    <string name="menu_about">About</string>
    
    <!-- BarrageList context menu -->
    <string name="menu_edit">Edit</string>
    <string name="menu_pause">Pause</string>
    <string name="menu_delete">Delete</string>
    
    <!-- Preferences options menu -->
    <string name="menu_restore_defaults">Restore Defaults</string>
    
    <!-- Compose options menu -->
    <string name="menu_start_barrage">Start Barrage</string>
    <string name="menu_save_draft">Save Draft</string>
    <string name="menu_save_as_template">Save As Template</string>
    <string name="menu_cancel">Cancel</string>
    
    <!-- About -->
    <string name="by">by Jake Wharton</string>
    
    <string name="confirm_delete_title">Delete?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="confirm_delete_all">Are you sure you want to delete all barrages? THIS CANNOT BE UNDONE!</string>
    <string name="confirm_delete">Are you sure you want to delete this barrage?</string>
        
    <string name="create_new_barrage">Create new barrage...</string>
    
    <string name="compose_to_hint">To</string>
    <string name="compose_number_of_messages">Number Of Messages:</string>
    <string name="compose_default_count">2</string>
    <string name="compose_delay_between">Delay Between Messages:</string>
    <string name="compose_default_delay">1000</string>
    <string name="compose_send">Send</string>
    <string name="compose_save">Save</string>
    <string name="compose_message_hint">Message</string>
</resources>