<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <ScrollView
    	android:layout_width="fill_parent"
    	android:layout_height="fill_parent">
    	<RelativeLayout
    		android:layout_width="fill_parent"
    		android:layout_height="fill_parent"
    	    android:paddingLeft="10dip"
    		android:paddingRight="10dip"
    		android:paddingTop="10dip"
    		android:paddingBottom="10dip">
		<com.android.mms.ui.RecipientsEditor
			android:id="@+id/recipients_editor"
			android:hint="@string/compose_to_hint"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:singleLine="true"/>
	   	<TextView
	   		android:id="@+id/number_of_messages_text"
	   		android:layout_width="wrap_content"
	   		android:layout_height="wrap_content"
	   		android:layout_marginRight="5dip"
	   		android:layout_marginTop="10dip"
	   		android:text="@string/compose_number_of_messages"
	   		android:layout_below="@id/recipients_editor"/>
	   	<TextView
	   		android:id="@+id/number_of_messages_count"
	   		android:layout_width="wrap_content"
	   		android:layout_height="wrap_content"
	   		android:layout_marginTop="10dip"
	   		android:layout_toRightOf="@id/number_of_messages_text"
	   		android:text="@string/compose_default_count"
	   		android:layout_below="@id/recipients_editor"/>
	   	<SeekBar
	   		android:id="@+id/number_of_messages"
	   		android:layout_width="fill_parent"
	   		android:layout_height="wrap_content"
	   		android:max="98"
	   		android:layout_below="@id/number_of_messages_text"/>
	   	<TextView
	   		android:id="@+id/delay_text"
	   		android:layout_width="wrap_content"
	   		android:layout_height="wrap_content"
	   		android:layout_marginRight="5dip"
	   		android:layout_marginTop="10dip"
	   		android:text="@string/compose_delay_between"
	   		android:layout_below="@id/number_of_messages"/>
	   	<TextView
	   		android:id="@+id/delay_count"
	   		android:layout_width="wrap_content"
	   		android:layout_height="wrap_content"
	   		android:layout_marginTop="10dip"
	   		android:layout_toRightOf="@id/delay_text"
	   		android:text="@string/compose_default_delay"
	   		android:layout_below="@id/number_of_messages"/>
	   	<SeekBar
	   		android:id="@+id/delay"
	   		android:layout_width="fill_parent"
	   		android:layout_height="wrap_content"
	   		android:max="10000"
	   		android:layout_below="@id/delay_text"/>
	   	<Button
	   		android:id="@+id/send"
	   		android:layout_width="wrap_content"
	   		android:layout_height="wrap_content"
	   		android:layout_marginTop="10dip"
	   		android:layout_alignParentRight="true"
	   		android:text="@string/compose_send"
	   		android:layout_below="@id/delay"/>
	   	<Button
	   		android:id="@+id/save"
	   		android:layout_width="wrap_content"
	   		android:layout_height="wrap_content"
	   		android:layout_marginTop="5dip"
	   		android:layout_alignParentRight="true"
	   		android:text="@string/compose_save"
	   		android:layout_below="@id/send"/>
	   	<EditText
	   		android:id="@+id/message"
	   		android:layout_width="fill_parent"
	   		android:layout_height="wrap_content"
	   		android:hint="@string/compose_message_hint"
	   		android:layout_marginTop="10dip"
	   		android:layout_toLeftOf="@id/send"
	   		android:layout_alignBottom="@id/save"
	   		android:layout_below="@id/delay"/>
	   	</RelativeLayout>
   	</ScrollView>
</LinearLayout>